# SCPSL-Token-Validator-Linux

./: .gitignore  CMakeLists.txt  LICENSE  TokenValidatorLinux.kdev4
src/: main.cpp
src/enums/: ElementIDs.hpp
src/frames/: MainFrame.cpp  MainFrame.hpp
src/modules/: ApiModule.cpp  ApiModule.hpp  QrModule.cpp  QrModule.hpp
